2000-09-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/powerpc/dl-machine.c: Add volatile to PPC_DCBST, PPC_SYNC,
	and PPC_ICBI asm for broken compilers.
	Patch by Franz Sirl <Franz.Sirl-kernel@lauterbach.com>.

2000-09-09  Andreas Jaeger  <aj@suse.de>

	* manual/message.texi (Advanced gettext functions): Fix typo.

	* sysdeps/unix/sysv/linux/dl-osinfo.h: Include <string.h> for
	strncpy prototype.

2000-09-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/memchr.S: Add .pred.rel to avoid wrong assembler
	warnings.
	* sysdeps/ia64/memccpy.S: Likewise.
	Patches by Jim Wilson <wilson@redhat.com>.

	* sysdeps/unix/sysv/linux/dl-osinfo.h (DL_SYSDEP_OSCHECK): Use uname
	before trying to read /proc.
	Patch by Matt Wilson <msw@redhat.com>.
	* include/sys/utsname.h: Declare __uname.
	* sysdeps/generic/uname.c: Make uname a weak alias of __uname.
	* sysdeps/mach/hurd/uname.c: Likewise.
	* sysdeps/unix/syscalls.list: Likewise.

	* iconv/gconv_dl.c (do_release_shlib): Rewrite condition for
	unloading a bit.

2000-09-08  Ulrich Drepper  <drepper@redhat.com>

	* posix/getopt.c (_getopt_internal): When long_only is set always
	recognize conflicts just like before.

2000-09-08  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* sysdeps/ia64/Makefile (sysdep-rtld-routines): New variable.

2000-09-08  Greg McGary  <greg@mcgary.org>

	* sysdeps/unix/sysv/linux/syscalls.list (mincore): Fix arg signature.
	* sysdeps/unix/make-syscalls.sh: New signature keyletter `V'.
	* sysdeps/generic/bp-checks.h (CHECK_N_PAGES): New macro.

2000-09-08  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/arm/lockf64.c: New file.

	* sysdeps/unix/sysv/linux/arm/fcntl.c: New file.

	* sysdeps/unix/sysv/linux/arm/bits/fcntl.h
	(F_GETLK64,F_SETLK64,F_SETLKW64): Use values from 2.4.0-test8.
	(F_GETLK,F_SETLK,F_SETLKW): Handle __USE_FILE_OFFSET64 correctly.

2000-09-07  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/tst-tables.sh: Enable EUC-KR test.
